@@ -1,15 +1,8 @@
 # -*- mode: shell-script; indent-tabs-mode: nil; sh-basic-offset: 4; -*-
 # ex: ts=8 sw=4 sts=4 et filetype=sh
 
-dracut_install mount mknod mkdir pidof sleep chroot sed ls flock cp mv dmesg \
-    rm ln mkfifo less 
-if [[ ${ignore_kmodules} = yes ]]; then
-    inst /bin/true
-    ln -s /bin/true "${initdir}"/sbin/modprobe
-    ln -s /bin/true "${initdir}"/sbin/rmmod
-else
-    dracut_install modprobe rmmod
-fi
+dracut_install mount mknod mkdir modprobe pidof sleep chroot \
+    sed ls flock cp mv dmesg rm ln rmmod mkfifo less 
 if [ ! -e "${initdir}/bin/sh" ]; then
     dracut_install bash
     (ln -s bash "${initdir}/bin/sh" || :)
@@ -33,4 +26,3 @@ inst "$moddir/dracut-lib.sh" "/lib/dracut-lib.sh"
 inst_hook cmdline 10 "$moddir/parse-root-opts.sh"
 inst_hook cmdline 20 "$moddir/parse-blacklist.sh"
 mkdir -p "${initdir}/var/run"
-
